# kdump-tool

./: ChangeLog  Makefile.am  README  README.md  configure.ac  elfc.c  elfc.h  elfhnd.c  elfhnd.h  kdump-arm.c  kdump-i386.c  kdump-makedyn.1  kdump-makedyn.c  kdump-mips.c  kdump-ppc32.c  kdump-tool.1  kdump-tool.c  kdump-tool.h  kdump-x86_64.c  kdump_gdbinit  kdumpi386.c  kdumpmips.c  kdumptool.1  kdumptool.c  kdumptool.h  kdumpx86_64.c  list.c  list.h  oldmem.c  oldmem.h
kernel-patches/: 0001-MIPS-kdump-Add-some-more-symbols.patch  0001-kdump-Add-system-memory-ranges-to-VMCOREINFO.patch  0001-kdump-add-physical-pgd-address-to-VMCOREINFO.patch  0001-kdump-mips-Add-necessary-items-for-core-extraction.patch  0001-mips-Add-an-option-to-set-up-exception-frames-for-gd.patch  0001-mips-Add-kernel-entry-point-to-kernel-crashdump-info.patch  0001-x86-Provide-context-switch-point-for-kdump-process-t.patch  0002-kdump-mips-Add-necessary-items-for-core-extraction.patch  0002-kdump-ppc32-Add-necessary-items-for-core-extraction.patch  0002-x86-Add-kernel-entry-point-to-kernel-crashdump-info.patch  0003-ppc-Add-kernel-entry-point-to-kernel-crashdump-info.patch
